--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
 </head>
 <body>
-  <a href="add_feature.html">Add Feature</a>
+  <a href="add_feature.php">Add Feature</a>
+  <a href="add_scenario.php">Add Scenario</a>
 </body>
 </html>
