Fixed bugs in scenario and step insertion

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 </head>
 <body>
-  <a href="add_feature.php">Add Feature</a>
+  <a href="add_feature.php">Add Feature</a></br>
   <a href="add_scenario.php">Add Scenario</a>
 </body>
 </html>
