--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <head>
 </head>
 <body>
-  <a href="add_feature.php">Add Feature</a></br>
-  <a href="add_scenario.php">Add Scenario</a>
+  <a href="add_feature.php">Add Feature</a><br/>
+  <a href="add_scenario.php">Add Scenario</a><br/>
+  <br/>
+  <a href="view_features.php">View Features</a><br/>
 </body>
 </html>
