Added page to view all scenarios from all features

--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
   <a href="add_scenario.php">Add Scenario</a><br/>
   <br/>
   <a href="view_features.php">View Features</a><br/>
+  <a href="view_scenarios.php">View Scenarios</a><br/>
 </body>
 </html>
