--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <html>
 <head>
+  <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
+</head>
+
+<body>
 </head>
 <body>
   <a href="add_feature.php">Add Feature</a><br/>
